--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,7 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-      <h1> <%= @cocktail.name %>      </h1>
+      <h1> <%= @cocktail.name %>   </h1>
+
+      <% @cocktail.doses.each do |d| %>
+        <h2>  <%= d.ingredient.name %> <%= d.description %>  </h2>
+      <% end %>
+
+
       <%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail) %>
       <%= link_to "Back", cocktails_path  %>
     </div>
